--- a/package.json
+++ b/package.json
@@ -1,40 +1,35 @@
 {
-  "name": "app-incode",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^3.3.0",
-    "axios": "^0.18.0",
-    "react": "^16.5.2",
-    "react-dom": "^16.5.2",
-    "react-redux": "^5.0.7",
-    "react-router-dom": "^4.3.1",
-    "react-scripts": "2.0.5",
-    "redux": "^4.0.1",
-    "redux-form": "^7.4.2",
-    "redux-thunk": "^2.3.0"
-  },
+  "name": "library-app",
+  "version": "1.0.0",
+  "description": "Library app. It's small educational CRUD app with authentication and authorization functionality.\r Server: Node.JS, Express etc.\r Client: React, Redux",
+  "main": "index.js",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server/server.js",
+    "server": "nodemon server/server.js"
   },
-  "eslintConfig": {
-    "extends": "react-app"
+  "engines": {
+    "node": "8.11.3"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ],
-  "devDependencies": {
-    "eslint": "5.6.0",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "redux-devtools-extension": "^2.13.5"
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/AndrZakhara/library-app.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/AndrZakhara/library-app/issues"
+  },
+  "homepage": "https://github.com/AndrZakhara/library-app#readme",
+  "dependencies": {
+    "bcrypt": "^3.0.2",
+    "body-parser": "^1.18.3",
+    "concurrently": "^4.0.1",
+    "cookie-parser": "^1.4.3",
+    "express": "^4.16.4",
+    "jsonwebtoken": "^8.3.0",
+    "moment-js": "^1.1.15",
+    "mongoose": "^5.3.10"
   }
 }
