--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
     "moment-js": "^1.1.15",
-    "mongoose": "^5.3.10"
+    "mongoose": "^5.3.10",
+    "nodemon": "^1.18.6"
   }
 }
